src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_messages_test__for_with_unexpected_token_1.snap
---
source: src/parser/tests/parse_errors/parse_error_messages_test.rs
expression: diagnostics
---
error: Could not resolve reference to ALPHA
  ┌─ <internal>:3:15
  │
3 │         FOR z ALPHA x TO y DO
  │               ^^^^^ Could not resolve reference to ALPHA

error: Could not resolve reference to y
  ┌─ <internal>:5:13
  │
5 │             y;
  │             ^ Could not resolve reference to y


